--- a/Hoofdstukken/requirements.tex
+++ b/Hoofdstukken/requirements.tex
@@ -5,7 +5,7 @@ Het systeem bestaat uit een browseromgeving dat door middel van HTML en JavaScri
 
 Initieel is een lijst met requirements opgesteld. Gedurende het ontwikkelproces zijn onder andere op basis van feedback van de opdrachtgever nieuwe requirements aan de orde gekomen; deze requirements zijn in deze lijst opgenomen.
 
-De requirements zijn opgesteld met de MoSCoW-methode. Bij deze methode kunnen essenti\"ele, niet-essenti\"ele en uitgesloten requirements vastgesteld worden. Aan het eind van het project kan dan beter beoordeeld worden of alle essenti\"ele functionaliteit ge\"implementeerd is. Er wordt gebruik gemaakt van ``dient'' voor essenti\"ele requirements, ``kan eventueel'' voor niet-essentiele requirements en ``zal niet'' voor uitgesloten requirements. In \todo{vooruit verwijzen naar checken requirements} wordt het eindproduct beoordeeld op basis van de requirements.
+De requirements zijn opgesteld met de MoSCoW-methode. Bij deze methode kunnen essenti\"ele, niet-essenti\"ele en uitgesloten requirements vastgesteld worden. Aan het eind van het project kan dan beter beoordeeld worden of alle essenti\"ele functionaliteit ge\"implementeerd is. Er wordt gebruik gemaakt van ``dient'' voor essenti\"ele requirements, ``kan eventueel'' voor niet-essentiele requirements en ``zal niet'' voor uitgesloten requirements. In de traceability matrix in \todo{vooruit verwijzen naar checken requirements} wordt het eindproduct beoordeeld op basis van de requirements.
 
 \todo{Iets meer uitleggen over waarom requirements nodig zijn (bijv. t.b.v. gebruikerservaring of zat ook in Gloss-oplossing)}
 \subsubsection{Functionele requirements}
