Start aan traceability matrix

--- a/verslag.tex
+++ b/verslag.tex
@@ -15,6 +15,10 @@
 \usepackage{textcomp}  
 \usepackage{lmodern}  
 \usepackage{float}
+\usepackage{multirow}
+\usepackage{enumitem}
+\usepackage{tabularx}
+
 
 \DeclareCaptionFont{white}{ \color{white} }
 \DeclareCaptionFormat{listing}{
