Begin aan aanbevelingen

--- a/Hoofdstukken/evaluatie.tex
+++ b/Hoofdstukken/evaluatie.tex
@@ -1,7 +1,7 @@
 \chapter{Evaluatie} \label{hoofdstuk:evaluatie}
 \todo{evaluatie tenopzichte van de requirements}
 \section{Verbeteringen en aanbevelingen}
-\subsection{Delta updates (met animaties)}
+\input{./Hoofdstukken/evaluatie/aanbevelingen.tex}
 
 \section{Problemen}
 \subsection{IO Monad afsplitsen}
