Verdelen evaluatie in meerdere inputfiles

--- a/Hoofdstukken/evaluatie/aanbevelingen.tex
+++ b/Hoofdstukken/evaluatie/aanbevelingen.tex
@@ -1,3 +1,4 @@
+\section{Verbeteringen en aanbevelingen}
 \subsubsection{Image type}
 Canvas.hs ondersteund een breed scala aan grafische primitieven, zo goed als alle vectortekeningen zijn te maken met deze library. Helaas mist er ondersteuning voor plaatjes, zo kan de gebruiker bijvoorbeeld geen fotoalbum in Haskell/Canvas.hs schrijven.
 
