--- a/Hoofdstukken/ontwerp/globaal.tex
+++ b/Hoofdstukken/ontwerp/globaal.tex
@@ -1,5 +1,5 @@
 \section{Globaal ontwerp}  \label{sec:globaal}
-Canvas.hs is een library die de programmeur kan importeren in zijn programma om er daarna met de API die Canvas.hs aanbiedt gemakkelijk een uitgebreide user interface mee te bouwen. Canvas.hs focust zich op elementaire input en geen ondersteuning heeft voor high level interface elementen zoals buttons en textarea's. Deze elementen zullen\todo{niet eigen systeem afzwakken} met behulp van Canvas.hs wel eenvoudig te implementeren zijn. \autoref{fig:demo_screenshot} geeft een demoapplicatie van Canvas.hs weer.
+Canvas.hs is een library die de programmeur kan importeren in zijn programma om er daarna met de API die Canvas.hs aanbiedt gemakkelijk een uitgebreide user interface mee te bouwen. Canvas.hs focust zich op elementaire input en geen ondersteuning heeft voor high level interface elementen zoals knoppen en textgebeiden. Deze elementen zijn met behulp van Canvas.hs gemakklijk te implementeren. \autoref{fig:demo_screenshot} geeft een demoapplicatie van Canvas.hs weer.
 
 
 \begin{figure}[H]
@@ -21,8 +21,17 @@ Canvas.hs is een library die de programmeur kan importeren in zijn programma om 
 \end{center}
 \end{figure}
 
+Voor elk 
+
+Canvas.hs roept de eventhandler van de gebruiker aan met alle events die er in de grafische interface gebeuren. De eventhandler krijgt het event en de huidige state variabele als parameters mee en moet daarop de nieuwe state variabele en output teruggeven. Output bestaat uit acties die op de client uitgevoerd kunnen worden (zoals een prompt, fullscreen of download) en grafische output in de vorm van shapes.
+
+\begin{lstlising}
+
+\end{lstlisting}
+\label{fig:voorbeeldcode_eventhandler}
+\caption{Voorbeeldcode eventhandler}
+
+
 \todo{uitbreiden over shapes}
 \todo{uitbreiden met een klein stukje voorbeeldCode en wat meer uitleg over type v.d. eventHandler}
 \todo{aanpasssen dat we meer uitleg over het concept hebben, zodat veel termen niet in het detailontwerp voor het eerst langskomen. Het deailtontwerp leest nu teveel als een globaalontwerp met allemaal ontwerpkeuzes erdoorheen gestrooid, kort vertellen over gebruik libries als KineticJS e.d.}
-
-Canvas.hs roept de eventhandler van de gebruiker aan met alle events die er in de grafische interface gebeuren. De eventhandler krijgt het event en de huidige state variabele als parameters mee en moet daarop de nieuwe state variabele en output teruggeven. Output bestaat uit acties die op de client uitgevoerd kunnen worden (zoals een prompt, fullscreen of download) en grafische output in de vorm van shapes.
