--- a/Hoofdstukken/evaluatie/problemen.tex
+++ b/Hoofdstukken/evaluatie/problemen.tex
@@ -12,6 +12,13 @@ Zoals gezegd kent Haskell het concept van monads. Één van de doelen van Canvas
 Denk aan do-notatie, binds (>>=
 >>) en eigen monad voor de Server (state)
 \todo{onvoldoende toegelicht}
-
 \paragraph{Threads}
 Denk aan geziek met netjes de WebSockets en http-threads afsluiten en Timer-threads die nu doorlopen
+
+\todo{Hier is een stukje over het recordprobleem, maar waar het heen moet weet ik niet}
+\subsubsection{Records}
+Binnen Haskell is het zo dat elke sleutel van een record waarde een functie is. Als er een record gedefinieerd wordt met een sleutel ``sleutel'' bestaat er automatisch een functie \inlinecode{sleutel}. Hoewel dit op het eerste gezicht handig lijkt, betekend dit wel dat alle sleutels uniek moeten zijn. Het is zelfs zo dat sleutels globaal uniek moeten zijn, het is niet mogelijk twee records te maken (die niet in hetzelfde \inlinecode{data} element zitten) die dezelfde sleutel hebben.
+
+De meestgebruike JSON libraries gebruiken records die daarna naar JSON vertaald worden, dit bleek problematisch. Omdat er meerdere records waren met dezelfde veldnamen moesten er handmatig toJSON instanties geschreven werden waar interne veldnamen omgezet werden in externe veldnamen. Uiteindelijk is er een oplossing gevonden in de vorm van Template Haskell, als de toJSON instances gemaakt worden door toJSON kan je aangeven dat veldnamen aangepast moeten worden, alle records zijn daartoe voorzien van een prefix die er door Template Haskell afgehaald wordt.
+
+
