--- a/Hoofdstukken/ontwerp/globaal.tex
+++ b/Hoofdstukken/ontwerp/globaal.tex
@@ -1,6 +1,8 @@
 \section{Globaal ontwerp}  \label{sec:globaal}
 Canvas.hs is een library die de programmeur kan importeren in zijn programma om er daarna met de API die Canvas.hs aanbiedt gemakkelijk een uitgebreide user interface mee te bouwen. Canvas.hs focust zich op elementaire input en geen ondersteuning heeft voor high level interface elementen zoals knoppen en textgebeiden. Deze elementen zijn met behulp van Canvas.hs gemakklijk te implementeren. \autoref{fig:demo_screenshot} geeft een demoapplicatie van Canvas.hs weer.
 
+\todo{hier uitwijden over principe van Canvas.hs? Als het goed is al in inleiding gebeurd. Moet iig verteld zijn over hoe we een weegave hebben in een webbrowser met canvas, en een tussenliggende module die dat 'niet monadisch' mogelijk maakt}
+
 
 \begin{figure}[H]
 \begin{center}
@@ -22,21 +24,37 @@ Canvas.hs is een library die de programmeur kan importeren in zijn programma om 
 \end{figure}
 
 
-Voor elk 
+Voor elke gebeurtenis (event, zoals bijvoorbeeld een muisklik) die binnen het systeem plaatsvindt wordt de code van de user applicatie aangeroepen. Deze eventHandler kan op basis van deze gebeurtenis een nieuwe grafische boom opleveren, hierbij kan gedacht worden aan een boom met daarin o.a. text en simpele vormen die samen een groter geheel vormen. Deze boom zal vervolgens op het canvas getekend worden. De eventhandler kan daarnaast ook nog een aantal uit te voeren acties opleveren, hierbij kan gedacht worden aan bijvoorbeeld het lezen of schrijven van bestanden. Daarnaast heeft de eventHandler de mogelijkheid om state bij te houden. Elke keer dat deze door Canvas.hs wordt aangeroepen krijgt deze de vorige opgeleverde state mee en de eventhandler heeft een nieuwe state in het resultaat. Het type van de eventHandler ligt dit duidelijk toe: \inlinecode{eventHandler :: a -> Event -> (a, Output)}, hierin is \inlinecode{a} de state die de eventHandler kan bijhouden. 
 
-\todo{uitbreiden over shapes}
-\todo{uitbreiden met een klein stukje voorbeeldCode en wat meer uitleg over type v.d. eventHandler}
-\todo{aanpasssen dat we meer uitleg over het concept hebben, zodat veel termen niet in het detailontwerp voor het eerst langskomen. Het detailontwerp leest nu teveel als een globaalontwerp met allemaal ontwerpkeuzes erdoorheen gestrooid, kort vertellen over gebruik libries als KineticJS e.d.}
 
-Canvas.hs roept de eventhandler van de gebruiker aan met alle events die er in de grafische interface gebeuren. De eventhandler krijgt het event en de huidige state variabele als parameters mee en moet daarop de nieuwe state variabele en output teruggeven. Output bestaat uit acties die op de client uitgevoerd kunnen worden (zoals een prompt, fullscreen of download) en grafische output in de vorm van shapes.
+\autoref{eventHandler_voorbeeld_simpel} illustreeert een simpele eventHandler die bij de start van het programma (\inlinecode{StartEvent}) een vierkant tekent en een timer start. Vervolgens wordt elke keer dat deze Timer afgaat het vierkant verplaatst. Als state wordt een simpele \inlinecode{Int} gebruikt. D.m.v de installEventHandler functie van Canvas.hs wordt de eventHandler geregistreerd en het systeem gestart.
 
-\begin{lstlising}
+\begin{lstlisting}[caption=Voorbeeld van een simpele eventHandler, label=eventHandler_voorbeeld_simpel]
+import CanvasHs
+import CanvasHs.Data
 
+type State = Int
+
+main = installEventHandler handle 0
+
+handle :: State -> Event -> (State, Output)
+handle StartEvent st 	= (st+1, output)
+	where 
+		output = Out (shape, actions)
+		shape = rectangle st
+		actions = [Timer 1000 "move"]
+		
+handle (Tick "move") st	= (st+1, shape $ rectangle st)
+		
+rectangle :: Int -> Shape
+rectangle i = Rect (10*i, 10*i) 10 10
 \end{lstlisting}
-\label{fig:voorbeeldcode_eventhandler}
-\caption{Voorbeeldcode eventhandler}
 
+Een gedetailleerde handleiding over Events, Shapes, Actions in het algemeen het gebruik van Canvas.hs kan gevonden worden in appendix A: gebruikerhandleiding. \todo{Invoegen referentie}
 
-\todo{uitbreiden over shapes}
-\todo{uitbreiden met een klein stukje voorbeeldCode en wat meer uitleg over type v.d. eventHandler}
-\todo{aanpasssen dat we meer uitleg over het concept hebben, zodat veel termen niet in het detailontwerp voor het eerst langskomen. Het deailtontwerp leest nu teveel als een globaalontwerp met allemaal ontwerpkeuzes erdoorheen gestrooid, kort vertellen over gebruik libries als KineticJS e.d.}
+\paragraph{Shapes}
+Zoals hierboven aangegeven levert de eventHandler o.a. een grafische boom op. Deze boom is gebasseerd op het Shapetype. Dit type definieert een aantal primitieven, zoals lijnen en vierkanten, en aantal translaties zoals verschuivingen en translaties die op een primitieve worden toegepast. Daarnaast wordt via het Shapetype ook aangegeven of er interesse is in events, zoals muiklikken, die plaatsheben op de Shape. In fig is een grafische boom van Shapes weergegeven. 
+
+\todo{blablabla bilbiotheken gebriken om makkelijker te maken enzo}
+
+\todo{detailontwerp doorlezen om te checken of nog andere dingen gemist zijn bij globaal ontwerp}
