--- a/Hoofdstukken/ontwerp/detail/externelibraries.tex
+++ b/Hoofdstukken/ontwerp/detail/externelibraries.tex
@@ -15,6 +15,6 @@ Er zijn voor haskell twee bekende JSON libraries, Text.JSON en Aeson. In eerste 
 Binnen Aeson is er gekozen om Template Haskell functies te gebruiken, dit is een GHC extensie die een soort van metaprogramming toevoegd aan Haskell. Template Haskell is gebruikt om lege keys uit de \todo{robert: gaan jullie hier nog meer over vertellen?}JSON te verwijderen en een record probleem van Haskell te omzeilen.
 
 \subsubsection{Tests}
-Als testingframework hebben we voor Hspec gekozen. Hspec integreert goed met andere testframeworks zoals QuickCheck en HUnit maar daarbovenop voegt het verhalende syntax toe aan de testcases. Ook zoekt Hspec automatisch naar testcases, en paralleliseerd het testcode.
+Als testingframework hebben we voor Hspec gekozen. Hspec integreert goed met andere testframeworks zoals QuickCheck en HUnit maar daarbovenop voegt het verhalende syntax toe aan de testcases. Ook zoekt Hspec automatisch naar testcases, en paralleliseert het testcode.
 
 Binnen Hspec maken we ook gebruik van QuickCheck, deze library kan arbitraire testcases testen. Hiervoor dient de input gedefineerd te worden en dan zal QuickCheck een groot aantal testcases loslaten op de code. Vaak gebruiken we eerst een voorgedefineerde testcase (van HSpec zelf, wat weer een wrapper om HUnit is), en daarnaast een arbitrair aantal extra testcases gegenereerd door QuickCheck. Zo weten we dat het geen toeval was dat onze tests checkte en kunnen we zonder al te veel moeite veel gevallen proberen.
