--- a/verslag.tex
+++ b/verslag.tex
@@ -18,6 +18,10 @@
 \usepackage{multirow}
 \usepackage{enumitem}
 \usepackage{tabularx}
+\usepackage{qtree}
+\usepackage{newfloat} %used to draw trees (qtree) in a floating enviroment for captions
+
+\DeclareFloatingEnvironment[fileext=lod]{diagram} %create a floating enviroment for qtree
 
 
 \DeclareCaptionFont{white}{ \color{white} }
