--- a/references.bib
+++ b/references.bib
@@ -5,3 +5,11 @@ url = {http://www.haskell.org/haskellwiki/Top\_level\_mutable\_state},
 urldate = {4 Jan 2014},
 year = {2008}
 }
+@misc{Gitflow2010,
+      author = "Vincent Driessen",
+      title = "A successful Git branching model",
+      month = "February",
+      year = "2010",
+      url = "http://nvie.com/posts/a-successful-git-branching-model/",
+      urldate = {5 Feb 2010},
+}
